--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lato&family=Roboto&family=Sofia+Sans&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Sofia Sans";
+}
+body {
+  background-color: black;
+  color: white;
 }
