--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,39 @@ body {
   background-color: black;
   color: white;
 }
+#main-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 #page-content {
   padding-top: 10vh;
+  width: 70%;
+}
+a:active, a:visited, a:link {
+  text-decoration: none;
+  color: white;
+}
+h1 {
+
+}
+h2 {
+  
+}
+h3 {
+  
+}
+h4 {
+  
+}
+@media (max-width: 800px) {
+  #page-content {
+    width: 90%;
+  }
+  /* h1 {
+    font-size: 5.5vh;
+  }
+  h2 {
+    font-size: 3vh;
+  } */
 }
