--- a/src/main/NavBar/NavBar.css
+++ b/src/main/NavBar/NavBar.css
@@ -3,6 +3,7 @@
     width: 100%;
     display: flex;
     align-items: end;
+    justify-content: center;
     position: fixed;
     z-index: 1;
     background-color: rgb(20, 20, 20);
@@ -13,4 +14,36 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.NavBar .page-links {
+    display: grid;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.NavBar .hamburger-menu {
+    display: none;
+    height: 100%;
+    aspect-ratio: 1;
+}
+.NavBar .hamburger-img {
+    display: none;
+    height: 80%;
+    width: 80%;
+}
+
+@media (max-width: 800px) {
+    .NavBar .content {
+        justify-content: start;
+        width: 90%;
+    }
+    .NavBar .page-links {
+        display: none;
+    }
+    .NavBar .hamburger-menu {
+        display: flex;
+    }
+    .NavBar .hamburger-img {
+        display: flex;
+    }
 }
