about intro section finished

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ body {
   padding-top: 10vh;
   width: 70%;
 }
+#main-section {
+  width: 100%;
+  
+}
 a:active, a:visited, a:link {
   text-decoration: none;
   color: white;
