--- a/src/main/DropMenu/DropMenu.css
+++ b/src/main/DropMenu/DropMenu.css
@@ -26,10 +26,10 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    z-index: 0;
     background-color: rgba(24, 24, 24, 0.623);
     opacity: 0;
     transition: 0.75s;
+    display: none;
 }
 #hiddenDrop {
     margin-top: -35vh;
@@ -37,9 +37,15 @@
 #visibleDrop {
     margin-top: 0vh;
 }
-#hiddenShadow{
+#hiddenShadow {
     opacity: 0;
+    display: none;
 }
 #visibleShadow {
     opacity: 1;
+    display: flex;
+}
+
+@media (max-width: 800px) {
+
 }
