--- a/src/main/Pages/AboutPage/Components/InterestsSection/SubjectView/SubjectView.css
+++ b/src/main/Pages/AboutPage/Components/InterestsSection/SubjectView/SubjectView.css
@@ -36,7 +36,7 @@
     .SubjectView {
         grid-template-columns: 1fr;
     }
-    .SubjectView .img-div {
-        display: none;
+    .SubjectView img {
+        max-width: 50vw;
     }
 }
