--- a/src/main/Pages/AboutPage/Components/IntroSection/IntroSection.css
+++ b/src/main/Pages/AboutPage/Components/IntroSection/IntroSection.css
@@ -3,6 +3,11 @@
 }
 .IntroSection h2 {
     padding-bottom: 2vh;
+    font-weight: 100;
+}
+.IntroSection h3 {
+    font-weight: 100;
+    color: gray;
 }
 .IntroSection .summary {
     display: grid;
