--- a/src/main/Components/NavBar/NavBar.css
+++ b/src/main/Components/NavBar/NavBar.css
@@ -21,6 +21,9 @@
     justify-content: center;
     align-items: center;
 }
+#selected-link {
+    text-decoration: underline;
+}
 .NavBar .hamburger-menu {
     display: none;
     height: 100%;
