--- a/src/main/Components/DropMenu/DropMenu.css
+++ b/src/main/Components/DropMenu/DropMenu.css
@@ -4,6 +4,7 @@
     justify-content: center;
     padding-top: 10vh;
     position: fixed; 
+    z-index: 2;
 }
 .DropMenu .menu-content {
     width: 100%;
