--- a/src/App.css
+++ b/src/App.css
@@ -31,25 +31,35 @@ a:active, a:visited, a:link {
   color: white;
 }
 h1 {
+  font-size: 6vh;
+  font-weight: 900;
   pointer-events: none;
 }
 h2 {
+  font-size: 4vh;
+  font-weight: 500;
   pointer-events: none;
 }
 h3 {
+  font-size: 2.5vh;
+  font-weight: 100;
   pointer-events: none;
 }
 h4 {
   pointer-events: none;
 }
-@media (max-width: 800px) {
+
+@media (max-width: 1100px) {
   #page-content {
     width: 90%;
   }
-  /* h1 {
-    font-size: 5.5vh;
+  h1 {
+    font-size: 4.5vh;
   }
   h2 {
     font-size: 3vh;
-  } */
+  }
+  h3 {
+    font-size: 2vh;
+  }
 }
