--- a/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
+++ b/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
@@ -14,11 +14,11 @@
     font-weight: 100;
 }
 .AppCard .img {
-    height: 50vh;
+    max-height: 50vh;
 }
 .AppCard .img img {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     object-fit: contain;
 }
 .AppCard .app-info {
@@ -35,7 +35,7 @@
     background-color: blue;
 }
 .AppCard .link {
-    width: 40%;
+    width: fit-content;
 }
 .AppCard .details-btn {
     height: 100%;
@@ -48,8 +48,8 @@
 }
 .AppCard .details-btn h2 {
     width: 100%;
-    margin-top: 1.5vh;
-    margin-bottom: 1.5vh;
+    padding: 1.5vh;
+    white-space: nowrap;
     text-align: center;
 }
 .AppCard .details-btn:hover {
