--- a/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/Experience/Experience.css
+++ b/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/Experience/Experience.css
@@ -3,7 +3,6 @@
     padding-top: 4vh;
     display: grid;
     grid-template-columns: 20% 20% 60%;
-    /* width: 85%; */
 }
 .Experience h3 {
     color: gray;
@@ -32,7 +31,7 @@
 }
 .Experience .line {
     position: absolute;
-    background-color: gray;
+    background-color: rgb(121, 17, 17);
     width: 10px;
     height: 100%;
     z-index: 0;
