mode added to each image

--- a/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
+++ b/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
@@ -19,6 +19,9 @@
     max-width: 100%;
     object-fit: contain;
 }
+.AppCard .img img:hover {
+    cursor: pointer;
+}
 .AppCard .app-info {
     padding-top: 2vh;
     display: flex;
