--- a/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/ExperienceSection.css
+++ b/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/ExperienceSection.css
@@ -1,3 +1,7 @@
 .ExperienceSection {
-    padding-top: 6vh;
+    padding-top: 4vh;
+}
+.ExperienceSection h2 {
+    color: white;
+    text-decoration: underline;
 }
