--- a/src/main/Pages/AppDetailPage/Components/SummarySection/SummarySection.css
+++ b/src/main/Pages/AppDetailPage/Components/SummarySection/SummarySection.css
@@ -17,6 +17,9 @@
     width: 100%;
     object-fit: contain;
 }
+.SummarySection img:hover {
+    cursor: pointer;
+}
 .SummarySection h1{
     padding-bottom: 2vh;
 }
