--- a/src/App.css
+++ b/src/App.css
@@ -59,16 +59,23 @@ h4 {
 }
 
 @media (max-width: 1100px) {
-  #page-content {
-    width: 90%;
-  }
-  h1 {
-    font-size: 4.5vh;
-  }
-  h2 {
-    font-size: 3vh;
-  }
-  h3 {
-    font-size: 2vh;
-  }
+    #page-content {
+      width: 90%;
+      padding-top: 50px;
+    }
+    #main-section {
+      padding-bottom: 30px;
+    }
+    h1 {
+      font-size: 42px;
+      /* font-size: 4.5vh; */
+    }
+    h2 {
+      font-size: 30px;
+      /* font-size: 3.15vh; */
+    }
+    h3 {
+      /* font-size: 2.4vh */
+      font-size: 22px;
+    }
 }
