--- a/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/Experience/Experience.css
+++ b/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/Experience/Experience.css
@@ -39,6 +39,10 @@
 
 @media (max-width: 1100px) {
     .Experience {
+        padding-top: 35px;
         grid-template-columns: 22% 22% 56%;
+    }
+    .Experience .img {
+        height: 55px;
     }
 }
