--- a/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/Experience/Experience.css
+++ b/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/Experience/Experience.css
@@ -20,8 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 60%;
-    max-height: 6vh;
+    max-height: 60px;
     aspect-ratio: 1;
     background-color: white;
     border-radius: 50%;
@@ -42,5 +41,9 @@
     .Experience {
         padding-top: 35px;
         grid-template-columns: 22% 22% 56%;
+    }
+    .Experience .img {
+        max-width: 50%;
+        max-height: 60px;
     }
 }
