css updated to one sheet for colors

--- a/src/main/Pages/AboutPage/Components/InterestsSection/SubjectView/InterestView/InterestView.css
+++ b/src/main/Pages/AboutPage/Components/InterestsSection/SubjectView/InterestView/InterestView.css
@@ -1,8 +1,8 @@
 .InterestView h3 {
-    color: gray;
+    color: var(--darkText);
     padding-top: 2vh;
 }
 
 .InterestView span {
-    color: white;
+    color: var(--lightText);
 }
