--- a/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/ExperienceSection.css
+++ b/src/main/Pages/HomePage/Components/ResumeSection/ExperienceSection/ExperienceSection.css
@@ -2,7 +2,7 @@
     padding-top: 4vh;
 }
 .ExperienceSection h2 {
-    color: white;
+    color: var(--lightText);
     text-decoration: underline;
 }
 
