--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,14 @@
   --exploringDark: rgba(19, 19, 234, 0.7);
   --appDetailLight: rgb(69, 147, 225);
   --appDetailDark: rgba(7, 53, 123, 0.7);
+  --mainBackground: rgb(0,0,0);
+  --darkBackground: rgb(20, 20, 20);
+  --lightText: rgb(255, 255, 255);
+  --darkText: rgb(94, 94, 94);
+  --menuShadow: rgba(24, 24, 24, 0.623);
+  --selectedSubject: rgb(8, 186, 106);
+  --hoverSubject: rgba(165, 253, 206, 0.3);
+  --resumeRed: rgb(121, 17, 17);
 }
 * {
   margin: 0;
@@ -15,8 +23,8 @@
   font-family: "Sofia Sans";
 }
 body {
-  background-color: black;
-  color: white;
+  background-color: var(--mainBackground);
+  color: var(--lightText);
 }
 #main-page {
   display: flex;
@@ -37,7 +45,7 @@ body {
 }
 a:active, a:visited, a:link {
   text-decoration: none;
-  color: white;
+  color: var(--lightText);
 }
 h1 {
   font-size: 6vh;
@@ -61,21 +69,18 @@ h4 {
 @media (max-width: 1100px) {
     #page-content {
       width: 90%;
-      padding-top: 50px;
+      padding-top: 70px;
     }
     #main-section {
-      padding-bottom: 30px;
+      padding-bottom: 40px;
     }
     h1 {
       font-size: 42px;
-      /* font-size: 4.5vh; */
     }
     h2 {
       font-size: 30px;
-      /* font-size: 3.15vh; */
     }
     h3 {
-      /* font-size: 2.4vh */
       font-size: 20px;
     }
 }
