--- a/src/main/Components/DropMenu/DropMenu.css
+++ b/src/main/Components/DropMenu/DropMenu.css
@@ -12,7 +12,7 @@
     justify-content: center;
     z-index: 1;
     margin-top: -35vh;
-    background-color: rgb(20, 20, 20);
+    background-color: var(--darkBackground);
     transition: 0.5s;
 }
 .DropMenu .links-container {
@@ -27,7 +27,7 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(24, 24, 24, 0.623);
+    background-color: var(--menuShadow);
     opacity: 0;
     display: none;
     transition: 1s;
