--- a/src/main/Components/NavBar/NavBar.css
+++ b/src/main/Components/NavBar/NavBar.css
@@ -7,7 +7,7 @@
     justify-content: center;
     position: fixed;
     z-index: 3;
-    background-color: rgb(20, 20, 20);
+    background-color: var(--darkBackground);
 }
 .NavBar .content {
     height: 70%;
