--- a/src/main/Pages/AboutPage/Components/InterestsSection/SubjectView/SubjectView.css
+++ b/src/main/Pages/AboutPage/Components/InterestsSection/SubjectView/SubjectView.css
@@ -13,14 +13,14 @@
     align-items: center;
     width: 25vmin;
     cursor: pointer;
-    border: 1px solid white;
+    border: 1px solid var(--lightText);
     text-align: center;
 }
 .SubjectView .subject-btn:hover {
-    background-color: rgba(165, 253, 206, 0.3);
+    background-color: var(--hoverSubject);
 }
 #selected-subject {
-    background-color: rgb(8, 186, 106);
+    background-color: var(--selectedSubject);
 }
 .SubjectView .img-div {
     grid-row: span 2;
@@ -29,14 +29,19 @@
     height: 100%;
     width: 70%;
     max-height: 50vh;
-    max-width: 22.5vw;
+    max-width: 23vw;
 }
 
 @media (max-width: 1100px) {
     .SubjectView {
         grid-template-columns: 1fr;
+        grid-template-rows: 45px;
+    }
+    .SubjectView .subject-btn {
+        width: 150px;
     }
     .SubjectView img {
-        max-width: 50vw;
+        max-width: 300px;
+        max-height: 400px;
     }
 }
