--- a/src/main/Pages/AppDetailPage/Components/LinksSection/LinksSection.css
+++ b/src/main/Pages/AppDetailPage/Components/LinksSection/LinksSection.css
@@ -9,6 +9,9 @@
 }
 
 @media (max-width: 1100px) {
+    .LinksSection {
+        padding-top: 40px;
+    }
     .LinksSection .section-content {
         grid-template-columns: 1fr;
     }
