--- a/src/main/Pages/HomePage/Components/AppsSection/AppsSection.css
+++ b/src/main/Pages/HomePage/Components/AppsSection/AppsSection.css
@@ -2,7 +2,7 @@
     margin-bottom: 10vh;
 }
 .AppsSection h2 {
-    color: gray;
+    color: var(--darkText);
 }
 .apps-container {
     width: 100%;
