--- a/src/main/Pages/HomePage/Components/HeroSection/HeroSection.css
+++ b/src/main/Pages/HomePage/Components/HeroSection/HeroSection.css
@@ -1,8 +1,3 @@
-:root {
-    --CYellow: #c8ac60;
-    --CBlue: #276ab9;
-    --CRed: #b75854;
-}
 .HeroSection {
     height: 70vh;
 }
@@ -10,8 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
 .HeroSection h2 {
-    color: gray;
+    color: var(--darkText);
 }
