--- a/src/main/Pages/AppDetailPage/Components/InstructionsSection/Instruction/Instruction.css
+++ b/src/main/Pages/AppDetailPage/Components/InstructionsSection/Instruction/Instruction.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    justify-content: center;
+    min-width: 22%;
 }
 .Instruction .img {
     display: flex;
