--- a/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
+++ b/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
@@ -15,8 +15,8 @@
     max-height: 50vh;
 }
 .AppCard .img img {
-    max-height: 100%;
-    max-width: 100%;
+    height: 50vmin;
+    width: 100%;
     object-fit: contain;
 }
 .AppCard .img img:hover {
