--- a/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
+++ b/src/main/Pages/HomePage/Components/AppsSection/Components/AppCard/AppCard.css
@@ -33,6 +33,7 @@
     aspect-ratio: 1;
     border-radius: 1vh;
     margin-right: 2vw;
+    background-color: rebeccapurple;
 }
 .AppCard .link {
     width: fit-content;
